Updates parser to version 0.4
Updates version number and renames 'unit' attribute to 'units' for consistency.

Adds console logs to improve debugging during parsing.

--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
     <meta class="mktoBoolean" id="testBoolean" mktoName="Test Boolean" default="true" true_value="Yes" false_value="No">
     <meta class="mktoString" id="testString" mktoName="Test String" default="<strong>This is a test string</strong>" allowHTML="false">
     <meta class="mktoString" id="testHTMLString" mktoName="Test String" default="<strong>This is a test HTML string</strong>" allowHTML="true">
-    <meta class="mktoNumber" id="testNumber" mktoName="Test Number" default="10" unit="px">
+    <meta class="mktoNumber" id="testNumber" mktoName="Test Number" default="10" units="px">
     <meta class="mktoNumber" id="testNumberNoUnit" mktoName="Test Number" default="10">
 </head>
 <body>
